--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@ language: ruby
 rvm:
   - 2.1
   # 2.1.0 throws exception until issue is resolved: https://github.com/travis-ci/travis-ci/issues/2220
+env:
+  global:
+    # speed up nokogiri install
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
 
